[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/Typey.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Prefabs/BackButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Stone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/CastButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/FlashCardScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 55
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="FlashCardScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRectBorder" type="ColorRect" parent="."]
margin_left = 116.0
margin_top = 605.0
margin_right = 979.0
margin_bottom = 1646.0
color = Color( 0.278431, 0.133333, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 136.0
margin_top = 625.0
margin_right = 960.0
margin_bottom = 1626.0
color = Color( 0.611765, 0.498039, 0.443137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="." instance=ExtResource( 2 )]
margin_top = 0.0
margin_right = 256.0
margin_bottom = 192.0

[node name="CastButton" parent="." instance=ExtResource( 4 )]
margin_left = 136.0
margin_top = 1688.0
margin_right = 960.0
margin_bottom = 1880.0

[node name="Stone" parent="." instance=ExtResource( 3 )]
position = Vector2( 532.701, 279.7 )
scale = Vector2( 2, 2 )

[node name="Description" type="Label" parent="."]
margin_left = 148.0
margin_top = 633.0
margin_right = 952.0
margin_bottom = 1618.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.278431, 0.133333, 0.054902, 1 )
text = "This is test text. It will not be visible when the program is running."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CastButton" to="." method="_on_CastButton_pressed"]
[connection signal="update_description" from="Stone" to="." method="_on_Stone_update_description"]
